fix: fix contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   --background-rgb: #1D1F21;
-  --background-start-rgb: #2c2e30;
+  --background-start-rgb: #2C2C2C;
   --second-background: #444648;
   --first-theme: #FF6600;
   --second-theme: #ff983f;
