--- a/src/app/saves/saves.module.css
+++ b/src/app/saves/saves.module.css
@@ -1,5 +1,5 @@
 .headerPage {
-    width: 85%;
+    width: 895%;
     display: flex;
     align-items: center;
     justify-content: space-between;
