--- a/src/template/listPins/listPins.module.css
+++ b/src/template/listPins/listPins.module.css
@@ -1,5 +1,5 @@
 .containerRecourses {
-    width: 85%;
+    width: 95%;
     column-count: 3;
-    column-gap: 20px;
+    column-gap: 40px;
 }
